--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,19 @@
 
+
+@media (max-width: 769px) { 
+
+   .bottom-doc{
+    flex-direction: column-reverse;
+   }
+    
+    /* .bank-info{
+        width: 35%;
+    } */
+}
+
+
+
+
 .fade-in-navbar{
 animation: fadeIn 1s;
 -webkit-animation: fadeIn 1s;
