--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,15 @@
 
 .logo-chat .text-logo {
     z-index: 1;
-    /* position: absolute; */
     text-align: center;
-    /* width: 70%; */
     font-family: 'teko';
-    /* font-family: 'Bowlby One SC'; */
     border: 3px solid;
     border-radius: 50px;
-    /* left: 14%; */
     right: 0;
     bottom: -9%;
     color: white;
     width: 100%;
     font-size: 2.2rem;
-    /* padding: 0 15px */
   }
   .invoice-auth{
 
@@ -33,6 +28,9 @@
     cursor: pointer;
   }
 
+  .detail-area{
+    white-space: pre-wrap;
+  }
 
 
 
